[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpc_giannibi"
version = "0.0.1"
authors = [
  { name="Gianni Bianchini", email="giannibi@giannibi.net" },
]
description = "Python library for Robust and Predictive Control"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/giannibi/Robust-and-Predictive-Control"
"Bug Tracker" = "https://github.com/giannibi/Robust-and-Predictive-Control/issues"
